Bug 472909. Need to call FinishSettingProperties on nsTranformedTextRuns that we create as parts of other transformed textruns. r=smontagu

--HG--
extra : rebase_source : 38adef908b1ec8d6fcc97b1b6cb42690733ae752